// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`_parseArgvPkgNameCore 核心邏輯 / Core logic 應該處理有效的 npa 結果 / should handle valid npa result 1`] = `
{
  "npaTry2": {
    "escapedName": "lodash",
    "fetchSpec": "4.17.21",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": "lodash",
    "raw": "lodash@4.17.21",
    "rawSpec": "4.17.21",
    "registry": true,
    "saveSpec": null,
    "scope": undefined,
    "type": "version",
    "where": undefined,
  },
  "parseArgvPkgName": {
    "input": "lodash@4.17.21",
    "name": "lodash",
    "namespace": undefined,
    "result": {
      "escapedName": "lodash",
      "fetchSpec": "4.17.21",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "lodash",
      "raw": "lodash@4.17.21",
      "rawSpec": "4.17.21",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "type": "version",
      "where": undefined,
    },
    "version": "4.17.21",
  },
  "parsePackageName": {
    "name": "lodash",
    "result": {
      "escapedName": "lodash",
      "fetchSpec": "4.17.21",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "lodash",
      "raw": "lodash@4.17.21",
      "rawSpec": "4.17.21",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "type": "version",
      "where": undefined,
    },
    "scope": undefined,
    "semver": "4.17.21",
    "subname": "lodash",
    "type": "version",
  },
}
`;

exports[`_parseArgvPkgNameCore 核心邏輯 / Core logic 應該處理有效的 npa 結果 / should handle valid npa result 2`] = `
{
  "npaTry2": {
    "escapedName": "lodash",
    "fetchSpec": "4.17.21",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": "lodash",
    "raw": "lodash@4.17.21",
    "rawSpec": "4.17.21",
    "registry": true,
    "saveSpec": null,
    "scope": undefined,
    "type": "version",
    "where": undefined,
  },
  "parseArgvPkgName": {
    "input": "lodash@4.17.21",
    "name": "lodash",
    "namespace": undefined,
    "result": {
      "escapedName": "lodash",
      "fetchSpec": "4.17.21",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "lodash",
      "raw": "lodash@4.17.21",
      "rawSpec": "4.17.21",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "type": "version",
      "where": undefined,
    },
    "version": "4.17.21",
  },
  "parsePackageName": {
    "name": "lodash",
    "result": {
      "escapedName": "lodash",
      "fetchSpec": "4.17.21",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "lodash",
      "raw": "lodash@4.17.21",
      "rawSpec": "4.17.21",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "type": "version",
      "where": undefined,
    },
    "scope": undefined,
    "semver": "4.17.21",
    "subname": "lodash",
    "type": "version",
  },
}
`;

exports[`_parseArgvPkgNameCore 核心邏輯 / Core logic 應該處理範圍套件的 npa 結果 / should handle scoped package npa result 1`] = `
{
  "npaTry2": {
    "escapedName": "@types%2fnode",
    "fetchSpec": "18.0.0",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": "@types/node",
    "raw": "@types/node@18.0.0",
    "rawSpec": "18.0.0",
    "registry": true,
    "saveSpec": null,
    "scope": "@types",
    "type": "version",
    "where": undefined,
  },
  "parseArgvPkgName": {
    "input": "@types/node@18.0.0",
    "name": "node",
    "namespace": "@types",
    "result": {
      "escapedName": "@types%2fnode",
      "fetchSpec": "18.0.0",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "@types/node",
      "raw": "@types/node@18.0.0",
      "rawSpec": "18.0.0",
      "registry": true,
      "saveSpec": null,
      "scope": "@types",
      "type": "version",
      "where": undefined,
    },
    "version": "18.0.0",
  },
  "parsePackageName": {
    "name": "@types/node",
    "result": {
      "escapedName": "@types%2fnode",
      "fetchSpec": "18.0.0",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "@types/node",
      "raw": "@types/node@18.0.0",
      "rawSpec": "18.0.0",
      "registry": true,
      "saveSpec": null,
      "scope": "@types",
      "type": "version",
      "where": undefined,
    },
    "scope": "@types",
    "semver": "18.0.0",
    "subname": "node",
    "type": "version",
  },
}
`;

exports[`_parseArgvPkgNameCore 核心邏輯 / Core logic 應該處理範圍套件的 npa 結果 / should handle scoped package npa result 2`] = `
{
  "npaTry2": {
    "escapedName": "@types%2fnode",
    "fetchSpec": "18.0.0",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": "@types/node",
    "raw": "@types/node@18.0.0",
    "rawSpec": "18.0.0",
    "registry": true,
    "saveSpec": null,
    "scope": "@types",
    "type": "version",
    "where": undefined,
  },
  "parseArgvPkgName": {
    "input": "@types/node@18.0.0",
    "name": "node",
    "namespace": "@types",
    "result": {
      "escapedName": "@types%2fnode",
      "fetchSpec": "18.0.0",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "@types/node",
      "raw": "@types/node@18.0.0",
      "rawSpec": "18.0.0",
      "registry": true,
      "saveSpec": null,
      "scope": "@types",
      "type": "version",
      "where": undefined,
    },
    "version": "18.0.0",
  },
  "parsePackageName": {
    "name": "@types/node",
    "result": {
      "escapedName": "@types%2fnode",
      "fetchSpec": "18.0.0",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "@types/node",
      "raw": "@types/node@18.0.0",
      "rawSpec": "18.0.0",
      "registry": true,
      "saveSpec": null,
      "scope": "@types",
      "type": "version",
      "where": undefined,
    },
    "scope": "@types",
    "semver": "18.0.0",
    "subname": "node",
    "type": "version",
  },
}
`;

exports[`_parsePackageNameCore 核心邏輯 / Core logic 應該處理別名套件的 npa 結果 / should handle alias package npa result 1`] = `
{
  "npaTry2": {
    "escapedName": "my-lodash",
    "fetchSpec": null,
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": "my-lodash",
    "raw": "my-lodash@npm:lodash@4.17.21",
    "rawSpec": "npm:lodash@4.17.21",
    "registry": true,
    "saveSpec": null,
    "scope": undefined,
    "subSpec": {
      "escapedName": "lodash",
      "fetchSpec": "4.17.21",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "lodash",
      "raw": "lodash@4.17.21",
      "rawSpec": "4.17.21",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "type": "version",
      "where": undefined,
    },
    "type": "alias",
    "where": undefined,
  },
  "parseArgvPkgName": {
    "input": "my-lodash@npm:lodash@4.17.21",
    "name": "my-lodash",
    "namespace": undefined,
    "result": {
      "escapedName": "my-lodash",
      "fetchSpec": null,
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "my-lodash",
      "raw": "my-lodash@npm:lodash@4.17.21",
      "rawSpec": "npm:lodash@4.17.21",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "subSpec": {
        "escapedName": "lodash",
        "fetchSpec": "4.17.21",
        "gitCommittish": undefined,
        "gitRange": undefined,
        "gitSubdir": undefined,
        "name": "lodash",
        "raw": "lodash@4.17.21",
        "rawSpec": "4.17.21",
        "registry": true,
        "saveSpec": null,
        "scope": undefined,
        "type": "version",
        "where": undefined,
      },
      "type": "alias",
      "where": undefined,
    },
    "version": "4.17.21",
  },
  "parsePackageName": {
    "name": "my-lodash",
    "result": {
      "escapedName": "my-lodash",
      "fetchSpec": null,
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "my-lodash",
      "raw": "my-lodash@npm:lodash@4.17.21",
      "rawSpec": "npm:lodash@4.17.21",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "subSpec": {
        "escapedName": "lodash",
        "fetchSpec": "4.17.21",
        "gitCommittish": undefined,
        "gitRange": undefined,
        "gitSubdir": undefined,
        "name": "lodash",
        "raw": "lodash@4.17.21",
        "rawSpec": "4.17.21",
        "registry": true,
        "saveSpec": null,
        "scope": undefined,
        "type": "version",
        "where": undefined,
      },
      "type": "alias",
      "where": undefined,
    },
    "scope": undefined,
    "semver": "4.17.21",
    "subname": "my-lodash",
    "type": "alias",
  },
}
`;

exports[`_parsePackageNameCore 核心邏輯 / Core logic 應該處理別名套件的 npa 結果 / should handle alias package npa result 2`] = `
{
  "npaTry2": {
    "escapedName": "my-lodash",
    "fetchSpec": null,
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": "my-lodash",
    "raw": "my-lodash@npm:lodash@4.17.21",
    "rawSpec": "npm:lodash@4.17.21",
    "registry": true,
    "saveSpec": null,
    "scope": undefined,
    "subSpec": {
      "escapedName": "lodash",
      "fetchSpec": "4.17.21",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "lodash",
      "raw": "lodash@4.17.21",
      "rawSpec": "4.17.21",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "type": "version",
      "where": undefined,
    },
    "type": "alias",
    "where": undefined,
  },
  "parseArgvPkgName": {
    "input": "my-lodash@npm:lodash@4.17.21",
    "name": "my-lodash",
    "namespace": undefined,
    "result": {
      "escapedName": "my-lodash",
      "fetchSpec": null,
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "my-lodash",
      "raw": "my-lodash@npm:lodash@4.17.21",
      "rawSpec": "npm:lodash@4.17.21",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "subSpec": {
        "escapedName": "lodash",
        "fetchSpec": "4.17.21",
        "gitCommittish": undefined,
        "gitRange": undefined,
        "gitSubdir": undefined,
        "name": "lodash",
        "raw": "lodash@4.17.21",
        "rawSpec": "4.17.21",
        "registry": true,
        "saveSpec": null,
        "scope": undefined,
        "type": "version",
        "where": undefined,
      },
      "type": "alias",
      "where": undefined,
    },
    "version": "4.17.21",
  },
  "parsePackageName": {
    "name": "my-lodash",
    "result": {
      "escapedName": "my-lodash",
      "fetchSpec": null,
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "my-lodash",
      "raw": "my-lodash@npm:lodash@4.17.21",
      "rawSpec": "npm:lodash@4.17.21",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "subSpec": {
        "escapedName": "lodash",
        "fetchSpec": "4.17.21",
        "gitCommittish": undefined,
        "gitRange": undefined,
        "gitSubdir": undefined,
        "name": "lodash",
        "raw": "lodash@4.17.21",
        "rawSpec": "4.17.21",
        "registry": true,
        "saveSpec": null,
        "scope": undefined,
        "type": "version",
        "where": undefined,
      },
      "type": "alias",
      "where": undefined,
    },
    "scope": undefined,
    "semver": "4.17.21",
    "subname": "my-lodash",
    "type": "alias",
  },
}
`;

exports[`_parsePackageNameCore 核心邏輯 / Core logic 應該處理無版本套件的 npa 結果 / should handle package without version 1`] = `
{
  "npaTry2": {
    "escapedName": "lodash",
    "fetchSpec": "*",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": "lodash",
    "raw": "lodash",
    "rawSpec": "*",
    "registry": true,
    "saveSpec": null,
    "scope": undefined,
    "type": "range",
    "where": undefined,
  },
  "parseArgvPkgName": {
    "input": "lodash",
    "name": "lodash",
    "namespace": undefined,
    "result": {
      "escapedName": "lodash",
      "fetchSpec": "*",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "lodash",
      "raw": "lodash",
      "rawSpec": "*",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "type": "range",
      "where": undefined,
    },
    "version": "*",
  },
  "parsePackageName": {
    "name": "lodash",
    "result": {
      "escapedName": "lodash",
      "fetchSpec": "*",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "lodash",
      "raw": "lodash",
      "rawSpec": "*",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "type": "range",
      "where": undefined,
    },
    "scope": undefined,
    "semver": "*",
    "subname": "lodash",
    "type": "range",
  },
}
`;

exports[`_parsePackageNameCore 核心邏輯 / Core logic 應該處理無版本套件的 npa 結果 / should handle package without version 2`] = `
{
  "npaTry2": {
    "escapedName": "lodash",
    "fetchSpec": "*",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": "lodash",
    "raw": "lodash",
    "rawSpec": "*",
    "registry": true,
    "saveSpec": null,
    "scope": undefined,
    "type": "range",
    "where": undefined,
  },
  "parseArgvPkgName": {
    "input": "lodash",
    "name": "lodash",
    "namespace": undefined,
    "result": {
      "escapedName": "lodash",
      "fetchSpec": "*",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "lodash",
      "raw": "lodash",
      "rawSpec": "*",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "type": "range",
      "where": undefined,
    },
    "version": "*",
  },
  "parsePackageName": {
    "name": "lodash",
    "result": {
      "escapedName": "lodash",
      "fetchSpec": "*",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "lodash",
      "raw": "lodash",
      "rawSpec": "*",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "type": "range",
      "where": undefined,
    },
    "scope": undefined,
    "semver": "*",
    "subname": "lodash",
    "type": "range",
  },
}
`;

exports[`_parsePackageNameCore 核心邏輯 / Core logic 應該處理範圍套件的 npa 結果 / should handle scoped package npa result 1`] = `
{
  "npaTry2": {
    "escapedName": "@types%2fnode",
    "fetchSpec": "18.0.0",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": "@types/node",
    "raw": "@types/node@18.0.0",
    "rawSpec": "18.0.0",
    "registry": true,
    "saveSpec": null,
    "scope": "@types",
    "type": "version",
    "where": undefined,
  },
  "parseArgvPkgName": {
    "input": "@types/node@18.0.0",
    "name": "node",
    "namespace": "@types",
    "result": {
      "escapedName": "@types%2fnode",
      "fetchSpec": "18.0.0",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "@types/node",
      "raw": "@types/node@18.0.0",
      "rawSpec": "18.0.0",
      "registry": true,
      "saveSpec": null,
      "scope": "@types",
      "type": "version",
      "where": undefined,
    },
    "version": "18.0.0",
  },
  "parsePackageName": {
    "name": "@types/node",
    "result": {
      "escapedName": "@types%2fnode",
      "fetchSpec": "18.0.0",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "@types/node",
      "raw": "@types/node@18.0.0",
      "rawSpec": "18.0.0",
      "registry": true,
      "saveSpec": null,
      "scope": "@types",
      "type": "version",
      "where": undefined,
    },
    "scope": "@types",
    "semver": "18.0.0",
    "subname": "node",
    "type": "version",
  },
}
`;

exports[`_parsePackageNameCore 核心邏輯 / Core logic 應該處理範圍套件的 npa 結果 / should handle scoped package npa result 2`] = `
{
  "npaTry2": {
    "escapedName": "@types%2fnode",
    "fetchSpec": "18.0.0",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": "@types/node",
    "raw": "@types/node@18.0.0",
    "rawSpec": "18.0.0",
    "registry": true,
    "saveSpec": null,
    "scope": "@types",
    "type": "version",
    "where": undefined,
  },
  "parseArgvPkgName": {
    "input": "@types/node@18.0.0",
    "name": "node",
    "namespace": "@types",
    "result": {
      "escapedName": "@types%2fnode",
      "fetchSpec": "18.0.0",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "@types/node",
      "raw": "@types/node@18.0.0",
      "rawSpec": "18.0.0",
      "registry": true,
      "saveSpec": null,
      "scope": "@types",
      "type": "version",
      "where": undefined,
    },
    "version": "18.0.0",
  },
  "parsePackageName": {
    "name": "@types/node",
    "result": {
      "escapedName": "@types%2fnode",
      "fetchSpec": "18.0.0",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "@types/node",
      "raw": "@types/node@18.0.0",
      "rawSpec": "18.0.0",
      "registry": true,
      "saveSpec": null,
      "scope": "@types",
      "type": "version",
      "where": undefined,
    },
    "scope": "@types",
    "semver": "18.0.0",
    "subname": "node",
    "type": "version",
  },
}
`;

exports[`_parsePackageNameCore 核心邏輯 / Core logic 應該處理簡單套件的 npa 結果 / should handle simple package npa result 1`] = `
{
  "npaTry2": {
    "escapedName": "lodash",
    "fetchSpec": "4.17.21",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": "lodash",
    "raw": "lodash@4.17.21",
    "rawSpec": "4.17.21",
    "registry": true,
    "saveSpec": null,
    "scope": undefined,
    "type": "version",
    "where": undefined,
  },
  "parseArgvPkgName": {
    "input": "lodash@4.17.21",
    "name": "lodash",
    "namespace": undefined,
    "result": {
      "escapedName": "lodash",
      "fetchSpec": "4.17.21",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "lodash",
      "raw": "lodash@4.17.21",
      "rawSpec": "4.17.21",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "type": "version",
      "where": undefined,
    },
    "version": "4.17.21",
  },
  "parsePackageName": {
    "name": "lodash",
    "result": {
      "escapedName": "lodash",
      "fetchSpec": "4.17.21",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "lodash",
      "raw": "lodash@4.17.21",
      "rawSpec": "4.17.21",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "type": "version",
      "where": undefined,
    },
    "scope": undefined,
    "semver": "4.17.21",
    "subname": "lodash",
    "type": "version",
  },
}
`;

exports[`_parsePackageNameCore 核心邏輯 / Core logic 應該處理簡單套件的 npa 結果 / should handle simple package npa result 2`] = `
{
  "npaTry2": {
    "escapedName": "lodash",
    "fetchSpec": "4.17.21",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": "lodash",
    "raw": "lodash@4.17.21",
    "rawSpec": "4.17.21",
    "registry": true,
    "saveSpec": null,
    "scope": undefined,
    "type": "version",
    "where": undefined,
  },
  "parseArgvPkgName": {
    "input": "lodash@4.17.21",
    "name": "lodash",
    "namespace": undefined,
    "result": {
      "escapedName": "lodash",
      "fetchSpec": "4.17.21",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "lodash",
      "raw": "lodash@4.17.21",
      "rawSpec": "4.17.21",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "type": "version",
      "where": undefined,
    },
    "version": "4.17.21",
  },
  "parsePackageName": {
    "name": "lodash",
    "result": {
      "escapedName": "lodash",
      "fetchSpec": "4.17.21",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "lodash",
      "raw": "lodash@4.17.21",
      "rawSpec": "4.17.21",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "type": "version",
      "where": undefined,
    },
    "scope": undefined,
    "semver": "4.17.21",
    "subname": "lodash",
    "type": "version",
  },
}
`;

exports[`parseArgvPkgName 基本功能 / Basic functionality 應該解析帶版本的套件 / should parse package with version 1`] = `
{
  "npaTry2": {
    "escapedName": "lodash",
    "fetchSpec": "4.17.21",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": "lodash",
    "raw": "lodash@4.17.21",
    "rawSpec": "4.17.21",
    "registry": true,
    "saveSpec": null,
    "scope": undefined,
    "type": "version",
    "where": undefined,
  },
  "parseArgvPkgName": {
    "input": "lodash@4.17.21",
    "name": "lodash",
    "namespace": undefined,
    "result": {
      "escapedName": "lodash",
      "fetchSpec": "4.17.21",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "lodash",
      "raw": "lodash@4.17.21",
      "rawSpec": "4.17.21",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "type": "version",
      "where": undefined,
    },
    "version": "4.17.21",
  },
  "parsePackageName": {
    "name": "lodash",
    "result": {
      "escapedName": "lodash",
      "fetchSpec": "4.17.21",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "lodash",
      "raw": "lodash@4.17.21",
      "rawSpec": "4.17.21",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "type": "version",
      "where": undefined,
    },
    "scope": undefined,
    "semver": "4.17.21",
    "subname": "lodash",
    "type": "version",
  },
}
`;

exports[`parseArgvPkgName 基本功能 / Basic functionality 應該解析帶版本的套件 / should parse package with version 2`] = `
{
  "npaTry2": {
    "escapedName": "lodash",
    "fetchSpec": "4.17.21",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": "lodash",
    "raw": "lodash@4.17.21",
    "rawSpec": "4.17.21",
    "registry": true,
    "saveSpec": null,
    "scope": undefined,
    "type": "version",
    "where": undefined,
  },
  "parseArgvPkgName": {
    "input": "lodash@4.17.21",
    "name": "lodash",
    "namespace": undefined,
    "result": {
      "escapedName": "lodash",
      "fetchSpec": "4.17.21",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "lodash",
      "raw": "lodash@4.17.21",
      "rawSpec": "4.17.21",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "type": "version",
      "where": undefined,
    },
    "version": "4.17.21",
  },
  "parsePackageName": {
    "name": "lodash",
    "result": {
      "escapedName": "lodash",
      "fetchSpec": "4.17.21",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "lodash",
      "raw": "lodash@4.17.21",
      "rawSpec": "4.17.21",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "type": "version",
      "where": undefined,
    },
    "scope": undefined,
    "semver": "4.17.21",
    "subname": "lodash",
    "type": "version",
  },
}
`;

exports[`parseArgvPkgName 基本功能 / Basic functionality 應該解析帶版本範圍的套件 / should parse package with version range 1`] = `
{
  "npaTry2": {
    "escapedName": "lodash",
    "fetchSpec": "^4.17.0",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": "lodash",
    "raw": "lodash@^4.17.0",
    "rawSpec": "^4.17.0",
    "registry": true,
    "saveSpec": null,
    "scope": undefined,
    "type": "range",
    "where": undefined,
  },
  "parseArgvPkgName": {
    "input": "lodash@^4.17.0",
    "name": "lodash",
    "namespace": undefined,
    "result": {
      "escapedName": "lodash",
      "fetchSpec": "^4.17.0",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "lodash",
      "raw": "lodash@^4.17.0",
      "rawSpec": "^4.17.0",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "type": "range",
      "where": undefined,
    },
    "version": "^4.17.0",
  },
  "parsePackageName": {
    "name": "lodash",
    "result": {
      "escapedName": "lodash",
      "fetchSpec": "^4.17.0",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "lodash",
      "raw": "lodash@^4.17.0",
      "rawSpec": "^4.17.0",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "type": "range",
      "where": undefined,
    },
    "scope": undefined,
    "semver": "^4.17.0",
    "subname": "lodash",
    "type": "range",
  },
}
`;

exports[`parseArgvPkgName 基本功能 / Basic functionality 應該解析帶版本範圍的套件 / should parse package with version range 2`] = `
{
  "npaTry2": {
    "escapedName": "lodash",
    "fetchSpec": "^4.17.0",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": "lodash",
    "raw": "lodash@^4.17.0",
    "rawSpec": "^4.17.0",
    "registry": true,
    "saveSpec": null,
    "scope": undefined,
    "type": "range",
    "where": undefined,
  },
  "parseArgvPkgName": {
    "input": "lodash@^4.17.0",
    "name": "lodash",
    "namespace": undefined,
    "result": {
      "escapedName": "lodash",
      "fetchSpec": "^4.17.0",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "lodash",
      "raw": "lodash@^4.17.0",
      "rawSpec": "^4.17.0",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "type": "range",
      "where": undefined,
    },
    "version": "^4.17.0",
  },
  "parsePackageName": {
    "name": "lodash",
    "result": {
      "escapedName": "lodash",
      "fetchSpec": "^4.17.0",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "lodash",
      "raw": "lodash@^4.17.0",
      "rawSpec": "^4.17.0",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "type": "range",
      "where": undefined,
    },
    "scope": undefined,
    "semver": "^4.17.0",
    "subname": "lodash",
    "type": "range",
  },
}
`;

exports[`parseArgvPkgName 基本功能 / Basic functionality 應該解析簡單套件名稱 / should parse simple package name 1`] = `
{
  "npaTry2": {
    "escapedName": "lodash",
    "fetchSpec": "*",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": "lodash",
    "raw": "lodash",
    "rawSpec": "*",
    "registry": true,
    "saveSpec": null,
    "scope": undefined,
    "type": "range",
    "where": undefined,
  },
  "parseArgvPkgName": {
    "input": "lodash",
    "name": "lodash",
    "namespace": undefined,
    "result": {
      "escapedName": "lodash",
      "fetchSpec": "*",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "lodash",
      "raw": "lodash",
      "rawSpec": "*",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "type": "range",
      "where": undefined,
    },
    "version": "*",
  },
  "parsePackageName": {
    "name": "lodash",
    "result": {
      "escapedName": "lodash",
      "fetchSpec": "*",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "lodash",
      "raw": "lodash",
      "rawSpec": "*",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "type": "range",
      "where": undefined,
    },
    "scope": undefined,
    "semver": "*",
    "subname": "lodash",
    "type": "range",
  },
}
`;

exports[`parseArgvPkgName 基本功能 / Basic functionality 應該解析簡單套件名稱 / should parse simple package name 2`] = `
{
  "npaTry2": {
    "escapedName": "lodash",
    "fetchSpec": "*",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": "lodash",
    "raw": "lodash",
    "rawSpec": "*",
    "registry": true,
    "saveSpec": null,
    "scope": undefined,
    "type": "range",
    "where": undefined,
  },
  "parseArgvPkgName": {
    "input": "lodash",
    "name": "lodash",
    "namespace": undefined,
    "result": {
      "escapedName": "lodash",
      "fetchSpec": "*",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "lodash",
      "raw": "lodash",
      "rawSpec": "*",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "type": "range",
      "where": undefined,
    },
    "version": "*",
  },
  "parsePackageName": {
    "name": "lodash",
    "result": {
      "escapedName": "lodash",
      "fetchSpec": "*",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "lodash",
      "raw": "lodash",
      "rawSpec": "*",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "type": "range",
      "where": undefined,
    },
    "scope": undefined,
    "semver": "*",
    "subname": "lodash",
    "type": "range",
  },
}
`;

exports[`parseArgvPkgName 範圍套件 / Scoped packages 應該解析帶版本的範圍套件 / should parse scoped package with version 1`] = `
{
  "npaTry2": {
    "escapedName": "@types%2fnode",
    "fetchSpec": "18.0.0",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": "@types/node",
    "raw": "@types/node@18.0.0",
    "rawSpec": "18.0.0",
    "registry": true,
    "saveSpec": null,
    "scope": "@types",
    "type": "version",
    "where": undefined,
  },
  "parseArgvPkgName": {
    "input": "@types/node@18.0.0",
    "name": "node",
    "namespace": "@types",
    "result": {
      "escapedName": "@types%2fnode",
      "fetchSpec": "18.0.0",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "@types/node",
      "raw": "@types/node@18.0.0",
      "rawSpec": "18.0.0",
      "registry": true,
      "saveSpec": null,
      "scope": "@types",
      "type": "version",
      "where": undefined,
    },
    "version": "18.0.0",
  },
  "parsePackageName": {
    "name": "@types/node",
    "result": {
      "escapedName": "@types%2fnode",
      "fetchSpec": "18.0.0",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "@types/node",
      "raw": "@types/node@18.0.0",
      "rawSpec": "18.0.0",
      "registry": true,
      "saveSpec": null,
      "scope": "@types",
      "type": "version",
      "where": undefined,
    },
    "scope": "@types",
    "semver": "18.0.0",
    "subname": "node",
    "type": "version",
  },
}
`;

exports[`parseArgvPkgName 範圍套件 / Scoped packages 應該解析帶版本的範圍套件 / should parse scoped package with version 2`] = `
{
  "npaTry2": {
    "escapedName": "@types%2fnode",
    "fetchSpec": "18.0.0",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": "@types/node",
    "raw": "@types/node@18.0.0",
    "rawSpec": "18.0.0",
    "registry": true,
    "saveSpec": null,
    "scope": "@types",
    "type": "version",
    "where": undefined,
  },
  "parseArgvPkgName": {
    "input": "@types/node@18.0.0",
    "name": "node",
    "namespace": "@types",
    "result": {
      "escapedName": "@types%2fnode",
      "fetchSpec": "18.0.0",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "@types/node",
      "raw": "@types/node@18.0.0",
      "rawSpec": "18.0.0",
      "registry": true,
      "saveSpec": null,
      "scope": "@types",
      "type": "version",
      "where": undefined,
    },
    "version": "18.0.0",
  },
  "parsePackageName": {
    "name": "@types/node",
    "result": {
      "escapedName": "@types%2fnode",
      "fetchSpec": "18.0.0",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "@types/node",
      "raw": "@types/node@18.0.0",
      "rawSpec": "18.0.0",
      "registry": true,
      "saveSpec": null,
      "scope": "@types",
      "type": "version",
      "where": undefined,
    },
    "scope": "@types",
    "semver": "18.0.0",
    "subname": "node",
    "type": "version",
  },
}
`;

exports[`parseArgvPkgName 範圍套件 / Scoped packages 應該解析範圍套件 / should parse scoped package 1`] = `
{
  "npaTry2": {
    "escapedName": "@types%2fnode",
    "fetchSpec": "*",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": "@types/node",
    "raw": "@types/node",
    "rawSpec": "*",
    "registry": true,
    "saveSpec": null,
    "scope": "@types",
    "type": "range",
    "where": undefined,
  },
  "parseArgvPkgName": {
    "input": "@types/node",
    "name": "node",
    "namespace": "@types",
    "result": {
      "escapedName": "@types%2fnode",
      "fetchSpec": "*",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "@types/node",
      "raw": "@types/node",
      "rawSpec": "*",
      "registry": true,
      "saveSpec": null,
      "scope": "@types",
      "type": "range",
      "where": undefined,
    },
    "version": "*",
  },
  "parsePackageName": {
    "name": "@types/node",
    "result": {
      "escapedName": "@types%2fnode",
      "fetchSpec": "*",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "@types/node",
      "raw": "@types/node",
      "rawSpec": "*",
      "registry": true,
      "saveSpec": null,
      "scope": "@types",
      "type": "range",
      "where": undefined,
    },
    "scope": "@types",
    "semver": "*",
    "subname": "node",
    "type": "range",
  },
}
`;

exports[`parseArgvPkgName 範圍套件 / Scoped packages 應該解析範圍套件 / should parse scoped package 2`] = `
{
  "npaTry2": {
    "escapedName": "@types%2fnode",
    "fetchSpec": "*",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": "@types/node",
    "raw": "@types/node",
    "rawSpec": "*",
    "registry": true,
    "saveSpec": null,
    "scope": "@types",
    "type": "range",
    "where": undefined,
  },
  "parseArgvPkgName": {
    "input": "@types/node",
    "name": "node",
    "namespace": "@types",
    "result": {
      "escapedName": "@types%2fnode",
      "fetchSpec": "*",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "@types/node",
      "raw": "@types/node",
      "rawSpec": "*",
      "registry": true,
      "saveSpec": null,
      "scope": "@types",
      "type": "range",
      "where": undefined,
    },
    "version": "*",
  },
  "parsePackageName": {
    "name": "@types/node",
    "result": {
      "escapedName": "@types%2fnode",
      "fetchSpec": "*",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "@types/node",
      "raw": "@types/node",
      "rawSpec": "*",
      "registry": true,
      "saveSpec": null,
      "scope": "@types",
      "type": "range",
      "where": undefined,
    },
    "scope": "@types",
    "semver": "*",
    "subname": "node",
    "type": "range",
  },
}
`;

exports[`parsePackageName 基本功能 / Basic functionality 應該解析帶標籤的套件 / should parse package with tag 1`] = `
{
  "npaTry2": {
    "escapedName": "lodash",
    "fetchSpec": "latest",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": "lodash",
    "raw": "lodash@latest",
    "rawSpec": "latest",
    "registry": true,
    "saveSpec": null,
    "scope": undefined,
    "type": "tag",
    "where": undefined,
  },
  "parseArgvPkgName": {
    "input": "lodash@latest",
    "name": "lodash",
    "namespace": undefined,
    "result": {
      "escapedName": "lodash",
      "fetchSpec": "latest",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "lodash",
      "raw": "lodash@latest",
      "rawSpec": "latest",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "type": "tag",
      "where": undefined,
    },
    "version": "latest",
  },
  "parsePackageName": {
    "name": "lodash",
    "result": {
      "escapedName": "lodash",
      "fetchSpec": "latest",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "lodash",
      "raw": "lodash@latest",
      "rawSpec": "latest",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "type": "tag",
      "where": undefined,
    },
    "scope": undefined,
    "semver": "latest",
    "subname": "lodash",
    "type": "tag",
  },
}
`;

exports[`parsePackageName 基本功能 / Basic functionality 應該解析帶標籤的套件 / should parse package with tag 2`] = `
{
  "npaTry2": {
    "escapedName": "lodash",
    "fetchSpec": "latest",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": "lodash",
    "raw": "lodash@latest",
    "rawSpec": "latest",
    "registry": true,
    "saveSpec": null,
    "scope": undefined,
    "type": "tag",
    "where": undefined,
  },
  "parseArgvPkgName": {
    "input": "lodash@latest",
    "name": "lodash",
    "namespace": undefined,
    "result": {
      "escapedName": "lodash",
      "fetchSpec": "latest",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "lodash",
      "raw": "lodash@latest",
      "rawSpec": "latest",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "type": "tag",
      "where": undefined,
    },
    "version": "latest",
  },
  "parsePackageName": {
    "name": "lodash",
    "result": {
      "escapedName": "lodash",
      "fetchSpec": "latest",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "lodash",
      "raw": "lodash@latest",
      "rawSpec": "latest",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "type": "tag",
      "where": undefined,
    },
    "scope": undefined,
    "semver": "latest",
    "subname": "lodash",
    "type": "tag",
  },
}
`;

exports[`parsePackageName 基本功能 / Basic functionality 應該解析帶版本的套件 / should parse package with version 1`] = `
{
  "npaTry2": {
    "escapedName": "lodash",
    "fetchSpec": "4.17.21",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": "lodash",
    "raw": "lodash@4.17.21",
    "rawSpec": "4.17.21",
    "registry": true,
    "saveSpec": null,
    "scope": undefined,
    "type": "version",
    "where": undefined,
  },
  "parseArgvPkgName": {
    "input": "lodash@4.17.21",
    "name": "lodash",
    "namespace": undefined,
    "result": {
      "escapedName": "lodash",
      "fetchSpec": "4.17.21",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "lodash",
      "raw": "lodash@4.17.21",
      "rawSpec": "4.17.21",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "type": "version",
      "where": undefined,
    },
    "version": "4.17.21",
  },
  "parsePackageName": {
    "name": "lodash",
    "result": {
      "escapedName": "lodash",
      "fetchSpec": "4.17.21",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "lodash",
      "raw": "lodash@4.17.21",
      "rawSpec": "4.17.21",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "type": "version",
      "where": undefined,
    },
    "scope": undefined,
    "semver": "4.17.21",
    "subname": "lodash",
    "type": "version",
  },
}
`;

exports[`parsePackageName 基本功能 / Basic functionality 應該解析帶版本的套件 / should parse package with version 2`] = `
{
  "npaTry2": {
    "escapedName": "lodash",
    "fetchSpec": "4.17.21",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": "lodash",
    "raw": "lodash@4.17.21",
    "rawSpec": "4.17.21",
    "registry": true,
    "saveSpec": null,
    "scope": undefined,
    "type": "version",
    "where": undefined,
  },
  "parseArgvPkgName": {
    "input": "lodash@4.17.21",
    "name": "lodash",
    "namespace": undefined,
    "result": {
      "escapedName": "lodash",
      "fetchSpec": "4.17.21",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "lodash",
      "raw": "lodash@4.17.21",
      "rawSpec": "4.17.21",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "type": "version",
      "where": undefined,
    },
    "version": "4.17.21",
  },
  "parsePackageName": {
    "name": "lodash",
    "result": {
      "escapedName": "lodash",
      "fetchSpec": "4.17.21",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "lodash",
      "raw": "lodash@4.17.21",
      "rawSpec": "4.17.21",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "type": "version",
      "where": undefined,
    },
    "scope": undefined,
    "semver": "4.17.21",
    "subname": "lodash",
    "type": "version",
  },
}
`;

exports[`parsePackageName 基本功能 / Basic functionality 應該解析帶版本範圍的套件 / should parse package with version range 1`] = `
{
  "npaTry2": {
    "escapedName": "lodash",
    "fetchSpec": "^4.17.0",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": "lodash",
    "raw": "lodash@^4.17.0",
    "rawSpec": "^4.17.0",
    "registry": true,
    "saveSpec": null,
    "scope": undefined,
    "type": "range",
    "where": undefined,
  },
  "parseArgvPkgName": {
    "input": "lodash@^4.17.0",
    "name": "lodash",
    "namespace": undefined,
    "result": {
      "escapedName": "lodash",
      "fetchSpec": "^4.17.0",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "lodash",
      "raw": "lodash@^4.17.0",
      "rawSpec": "^4.17.0",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "type": "range",
      "where": undefined,
    },
    "version": "^4.17.0",
  },
  "parsePackageName": {
    "name": "lodash",
    "result": {
      "escapedName": "lodash",
      "fetchSpec": "^4.17.0",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "lodash",
      "raw": "lodash@^4.17.0",
      "rawSpec": "^4.17.0",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "type": "range",
      "where": undefined,
    },
    "scope": undefined,
    "semver": "^4.17.0",
    "subname": "lodash",
    "type": "range",
  },
}
`;

exports[`parsePackageName 基本功能 / Basic functionality 應該解析帶版本範圍的套件 / should parse package with version range 2`] = `
{
  "npaTry2": {
    "escapedName": "lodash",
    "fetchSpec": "^4.17.0",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": "lodash",
    "raw": "lodash@^4.17.0",
    "rawSpec": "^4.17.0",
    "registry": true,
    "saveSpec": null,
    "scope": undefined,
    "type": "range",
    "where": undefined,
  },
  "parseArgvPkgName": {
    "input": "lodash@^4.17.0",
    "name": "lodash",
    "namespace": undefined,
    "result": {
      "escapedName": "lodash",
      "fetchSpec": "^4.17.0",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "lodash",
      "raw": "lodash@^4.17.0",
      "rawSpec": "^4.17.0",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "type": "range",
      "where": undefined,
    },
    "version": "^4.17.0",
  },
  "parsePackageName": {
    "name": "lodash",
    "result": {
      "escapedName": "lodash",
      "fetchSpec": "^4.17.0",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "lodash",
      "raw": "lodash@^4.17.0",
      "rawSpec": "^4.17.0",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "type": "range",
      "where": undefined,
    },
    "scope": undefined,
    "semver": "^4.17.0",
    "subname": "lodash",
    "type": "range",
  },
}
`;

exports[`parsePackageName 基本功能 / Basic functionality 應該解析簡單套件名稱 / should parse simple package name 1`] = `
{
  "npaTry2": {
    "escapedName": "lodash",
    "fetchSpec": "*",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": "lodash",
    "raw": "lodash",
    "rawSpec": "*",
    "registry": true,
    "saveSpec": null,
    "scope": undefined,
    "type": "range",
    "where": undefined,
  },
  "parseArgvPkgName": {
    "input": "lodash",
    "name": "lodash",
    "namespace": undefined,
    "result": {
      "escapedName": "lodash",
      "fetchSpec": "*",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "lodash",
      "raw": "lodash",
      "rawSpec": "*",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "type": "range",
      "where": undefined,
    },
    "version": "*",
  },
  "parsePackageName": {
    "name": "lodash",
    "result": {
      "escapedName": "lodash",
      "fetchSpec": "*",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "lodash",
      "raw": "lodash",
      "rawSpec": "*",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "type": "range",
      "where": undefined,
    },
    "scope": undefined,
    "semver": "*",
    "subname": "lodash",
    "type": "range",
  },
}
`;

exports[`parsePackageName 基本功能 / Basic functionality 應該解析簡單套件名稱 / should parse simple package name 2`] = `
{
  "npaTry2": {
    "escapedName": "lodash",
    "fetchSpec": "*",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": "lodash",
    "raw": "lodash",
    "rawSpec": "*",
    "registry": true,
    "saveSpec": null,
    "scope": undefined,
    "type": "range",
    "where": undefined,
  },
  "parseArgvPkgName": {
    "input": "lodash",
    "name": "lodash",
    "namespace": undefined,
    "result": {
      "escapedName": "lodash",
      "fetchSpec": "*",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "lodash",
      "raw": "lodash",
      "rawSpec": "*",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "type": "range",
      "where": undefined,
    },
    "version": "*",
  },
  "parsePackageName": {
    "name": "lodash",
    "result": {
      "escapedName": "lodash",
      "fetchSpec": "*",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "lodash",
      "raw": "lodash",
      "rawSpec": "*",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "type": "range",
      "where": undefined,
    },
    "scope": undefined,
    "semver": "*",
    "subname": "lodash",
    "type": "range",
  },
}
`;

exports[`parsePackageName 範圍套件 / Scoped packages 應該解析帶版本的範圍套件 / should parse scoped package with version 1`] = `
{
  "npaTry2": {
    "escapedName": "@types%2fnode",
    "fetchSpec": "18.0.0",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": "@types/node",
    "raw": "@types/node@18.0.0",
    "rawSpec": "18.0.0",
    "registry": true,
    "saveSpec": null,
    "scope": "@types",
    "type": "version",
    "where": undefined,
  },
  "parseArgvPkgName": {
    "input": "@types/node@18.0.0",
    "name": "node",
    "namespace": "@types",
    "result": {
      "escapedName": "@types%2fnode",
      "fetchSpec": "18.0.0",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "@types/node",
      "raw": "@types/node@18.0.0",
      "rawSpec": "18.0.0",
      "registry": true,
      "saveSpec": null,
      "scope": "@types",
      "type": "version",
      "where": undefined,
    },
    "version": "18.0.0",
  },
  "parsePackageName": {
    "name": "@types/node",
    "result": {
      "escapedName": "@types%2fnode",
      "fetchSpec": "18.0.0",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "@types/node",
      "raw": "@types/node@18.0.0",
      "rawSpec": "18.0.0",
      "registry": true,
      "saveSpec": null,
      "scope": "@types",
      "type": "version",
      "where": undefined,
    },
    "scope": "@types",
    "semver": "18.0.0",
    "subname": "node",
    "type": "version",
  },
}
`;

exports[`parsePackageName 範圍套件 / Scoped packages 應該解析帶版本的範圍套件 / should parse scoped package with version 2`] = `
{
  "npaTry2": {
    "escapedName": "@types%2fnode",
    "fetchSpec": "18.0.0",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": "@types/node",
    "raw": "@types/node@18.0.0",
    "rawSpec": "18.0.0",
    "registry": true,
    "saveSpec": null,
    "scope": "@types",
    "type": "version",
    "where": undefined,
  },
  "parseArgvPkgName": {
    "input": "@types/node@18.0.0",
    "name": "node",
    "namespace": "@types",
    "result": {
      "escapedName": "@types%2fnode",
      "fetchSpec": "18.0.0",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "@types/node",
      "raw": "@types/node@18.0.0",
      "rawSpec": "18.0.0",
      "registry": true,
      "saveSpec": null,
      "scope": "@types",
      "type": "version",
      "where": undefined,
    },
    "version": "18.0.0",
  },
  "parsePackageName": {
    "name": "@types/node",
    "result": {
      "escapedName": "@types%2fnode",
      "fetchSpec": "18.0.0",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "@types/node",
      "raw": "@types/node@18.0.0",
      "rawSpec": "18.0.0",
      "registry": true,
      "saveSpec": null,
      "scope": "@types",
      "type": "version",
      "where": undefined,
    },
    "scope": "@types",
    "semver": "18.0.0",
    "subname": "node",
    "type": "version",
  },
}
`;

exports[`parsePackageName 範圍套件 / Scoped packages 應該解析帶版本範圍的範圍套件 / should parse scoped package with version range 1`] = `
{
  "npaTry2": {
    "escapedName": "@types%2fnode",
    "fetchSpec": "^18.0.0",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": "@types/node",
    "raw": "@types/node@^18.0.0",
    "rawSpec": "^18.0.0",
    "registry": true,
    "saveSpec": null,
    "scope": "@types",
    "type": "range",
    "where": undefined,
  },
  "parseArgvPkgName": {
    "input": "@types/node@^18.0.0",
    "name": "node",
    "namespace": "@types",
    "result": {
      "escapedName": "@types%2fnode",
      "fetchSpec": "^18.0.0",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "@types/node",
      "raw": "@types/node@^18.0.0",
      "rawSpec": "^18.0.0",
      "registry": true,
      "saveSpec": null,
      "scope": "@types",
      "type": "range",
      "where": undefined,
    },
    "version": "^18.0.0",
  },
  "parsePackageName": {
    "name": "@types/node",
    "result": {
      "escapedName": "@types%2fnode",
      "fetchSpec": "^18.0.0",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "@types/node",
      "raw": "@types/node@^18.0.0",
      "rawSpec": "^18.0.0",
      "registry": true,
      "saveSpec": null,
      "scope": "@types",
      "type": "range",
      "where": undefined,
    },
    "scope": "@types",
    "semver": "^18.0.0",
    "subname": "node",
    "type": "range",
  },
}
`;

exports[`parsePackageName 範圍套件 / Scoped packages 應該解析帶版本範圍的範圍套件 / should parse scoped package with version range 2`] = `
{
  "npaTry2": {
    "escapedName": "@types%2fnode",
    "fetchSpec": "^18.0.0",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": "@types/node",
    "raw": "@types/node@^18.0.0",
    "rawSpec": "^18.0.0",
    "registry": true,
    "saveSpec": null,
    "scope": "@types",
    "type": "range",
    "where": undefined,
  },
  "parseArgvPkgName": {
    "input": "@types/node@^18.0.0",
    "name": "node",
    "namespace": "@types",
    "result": {
      "escapedName": "@types%2fnode",
      "fetchSpec": "^18.0.0",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "@types/node",
      "raw": "@types/node@^18.0.0",
      "rawSpec": "^18.0.0",
      "registry": true,
      "saveSpec": null,
      "scope": "@types",
      "type": "range",
      "where": undefined,
    },
    "version": "^18.0.0",
  },
  "parsePackageName": {
    "name": "@types/node",
    "result": {
      "escapedName": "@types%2fnode",
      "fetchSpec": "^18.0.0",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "@types/node",
      "raw": "@types/node@^18.0.0",
      "rawSpec": "^18.0.0",
      "registry": true,
      "saveSpec": null,
      "scope": "@types",
      "type": "range",
      "where": undefined,
    },
    "scope": "@types",
    "semver": "^18.0.0",
    "subname": "node",
    "type": "range",
  },
}
`;

exports[`parsePackageName 範圍套件 / Scoped packages 應該解析範圍套件 / should parse scoped package 1`] = `
{
  "npaTry2": {
    "escapedName": "@types%2fnode",
    "fetchSpec": "*",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": "@types/node",
    "raw": "@types/node",
    "rawSpec": "*",
    "registry": true,
    "saveSpec": null,
    "scope": "@types",
    "type": "range",
    "where": undefined,
  },
  "parseArgvPkgName": {
    "input": "@types/node",
    "name": "node",
    "namespace": "@types",
    "result": {
      "escapedName": "@types%2fnode",
      "fetchSpec": "*",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "@types/node",
      "raw": "@types/node",
      "rawSpec": "*",
      "registry": true,
      "saveSpec": null,
      "scope": "@types",
      "type": "range",
      "where": undefined,
    },
    "version": "*",
  },
  "parsePackageName": {
    "name": "@types/node",
    "result": {
      "escapedName": "@types%2fnode",
      "fetchSpec": "*",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "@types/node",
      "raw": "@types/node",
      "rawSpec": "*",
      "registry": true,
      "saveSpec": null,
      "scope": "@types",
      "type": "range",
      "where": undefined,
    },
    "scope": "@types",
    "semver": "*",
    "subname": "node",
    "type": "range",
  },
}
`;

exports[`parsePackageName 範圍套件 / Scoped packages 應該解析範圍套件 / should parse scoped package 2`] = `
{
  "npaTry2": {
    "escapedName": "@types%2fnode",
    "fetchSpec": "*",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": "@types/node",
    "raw": "@types/node",
    "rawSpec": "*",
    "registry": true,
    "saveSpec": null,
    "scope": "@types",
    "type": "range",
    "where": undefined,
  },
  "parseArgvPkgName": {
    "input": "@types/node",
    "name": "node",
    "namespace": "@types",
    "result": {
      "escapedName": "@types%2fnode",
      "fetchSpec": "*",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "@types/node",
      "raw": "@types/node",
      "rawSpec": "*",
      "registry": true,
      "saveSpec": null,
      "scope": "@types",
      "type": "range",
      "where": undefined,
    },
    "version": "*",
  },
  "parsePackageName": {
    "name": "@types/node",
    "result": {
      "escapedName": "@types%2fnode",
      "fetchSpec": "*",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "@types/node",
      "raw": "@types/node",
      "rawSpec": "*",
      "registry": true,
      "saveSpec": null,
      "scope": "@types",
      "type": "range",
      "where": undefined,
    },
    "scope": "@types",
    "semver": "*",
    "subname": "node",
    "type": "range",
  },
}
`;

exports[`parsePackageName 複雜案例 / Complex cases 應該解析別名套件 / should parse alias package 1`] = `
{
  "npaTry2": {
    "escapedName": "my-lodash",
    "fetchSpec": null,
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": "my-lodash",
    "raw": "my-lodash@npm:lodash@4.17.21",
    "rawSpec": "npm:lodash@4.17.21",
    "registry": true,
    "saveSpec": null,
    "scope": undefined,
    "subSpec": {
      "escapedName": "lodash",
      "fetchSpec": "4.17.21",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "lodash",
      "raw": "lodash@4.17.21",
      "rawSpec": "4.17.21",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "type": "version",
      "where": undefined,
    },
    "type": "alias",
    "where": undefined,
  },
  "parseArgvPkgName": {
    "input": "my-lodash@npm:lodash@4.17.21",
    "name": "my-lodash",
    "namespace": undefined,
    "result": {
      "escapedName": "my-lodash",
      "fetchSpec": null,
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "my-lodash",
      "raw": "my-lodash@npm:lodash@4.17.21",
      "rawSpec": "npm:lodash@4.17.21",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "subSpec": {
        "escapedName": "lodash",
        "fetchSpec": "4.17.21",
        "gitCommittish": undefined,
        "gitRange": undefined,
        "gitSubdir": undefined,
        "name": "lodash",
        "raw": "lodash@4.17.21",
        "rawSpec": "4.17.21",
        "registry": true,
        "saveSpec": null,
        "scope": undefined,
        "type": "version",
        "where": undefined,
      },
      "type": "alias",
      "where": undefined,
    },
    "version": "4.17.21",
  },
  "parsePackageName": {
    "name": "my-lodash",
    "result": {
      "escapedName": "my-lodash",
      "fetchSpec": null,
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "my-lodash",
      "raw": "my-lodash@npm:lodash@4.17.21",
      "rawSpec": "npm:lodash@4.17.21",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "subSpec": {
        "escapedName": "lodash",
        "fetchSpec": "4.17.21",
        "gitCommittish": undefined,
        "gitRange": undefined,
        "gitSubdir": undefined,
        "name": "lodash",
        "raw": "lodash@4.17.21",
        "rawSpec": "4.17.21",
        "registry": true,
        "saveSpec": null,
        "scope": undefined,
        "type": "version",
        "where": undefined,
      },
      "type": "alias",
      "where": undefined,
    },
    "scope": undefined,
    "semver": "4.17.21",
    "subname": "my-lodash",
    "type": "alias",
  },
}
`;

exports[`parsePackageName 複雜案例 / Complex cases 應該解析別名套件 / should parse alias package 2`] = `
{
  "npaTry2": {
    "escapedName": "my-lodash",
    "fetchSpec": null,
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": "my-lodash",
    "raw": "my-lodash@npm:lodash@4.17.21",
    "rawSpec": "npm:lodash@4.17.21",
    "registry": true,
    "saveSpec": null,
    "scope": undefined,
    "subSpec": {
      "escapedName": "lodash",
      "fetchSpec": "4.17.21",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "lodash",
      "raw": "lodash@4.17.21",
      "rawSpec": "4.17.21",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "type": "version",
      "where": undefined,
    },
    "type": "alias",
    "where": undefined,
  },
  "parseArgvPkgName": {
    "input": "my-lodash@npm:lodash@4.17.21",
    "name": "my-lodash",
    "namespace": undefined,
    "result": {
      "escapedName": "my-lodash",
      "fetchSpec": null,
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "my-lodash",
      "raw": "my-lodash@npm:lodash@4.17.21",
      "rawSpec": "npm:lodash@4.17.21",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "subSpec": {
        "escapedName": "lodash",
        "fetchSpec": "4.17.21",
        "gitCommittish": undefined,
        "gitRange": undefined,
        "gitSubdir": undefined,
        "name": "lodash",
        "raw": "lodash@4.17.21",
        "rawSpec": "4.17.21",
        "registry": true,
        "saveSpec": null,
        "scope": undefined,
        "type": "version",
        "where": undefined,
      },
      "type": "alias",
      "where": undefined,
    },
    "version": "4.17.21",
  },
  "parsePackageName": {
    "name": "my-lodash",
    "result": {
      "escapedName": "my-lodash",
      "fetchSpec": null,
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "my-lodash",
      "raw": "my-lodash@npm:lodash@4.17.21",
      "rawSpec": "npm:lodash@4.17.21",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "subSpec": {
        "escapedName": "lodash",
        "fetchSpec": "4.17.21",
        "gitCommittish": undefined,
        "gitRange": undefined,
        "gitSubdir": undefined,
        "name": "lodash",
        "raw": "lodash@4.17.21",
        "rawSpec": "4.17.21",
        "registry": true,
        "saveSpec": null,
        "scope": undefined,
        "type": "version",
        "where": undefined,
      },
      "type": "alias",
      "where": undefined,
    },
    "scope": undefined,
    "semver": "4.17.21",
    "subname": "my-lodash",
    "type": "alias",
  },
}
`;
